Remove webpack from Docker Compose:
I realized that it makes more sense to run Webpack on the host machine
as usually you will need to install Node's tools on the host to enjoy
better intelisense and eslint support in the editor.

On top of that, installing Node.js on most developer machines should be
relatively easy.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,14 +3,13 @@ services:
   api:
     build: .
     command: dev_server
-    volumes_from:
-      - webpack
     depends_on:
-      - webpack
       - postgres
       - redis
     ports:
-      - "5002:5000"
+      - "5000:5000"
+    volumes:
+      - ".:/app"
     environment:
       PYTHONUNBUFFERED: 0
       REDASH_LOG_LEVEL: "INFO"
@@ -20,30 +19,18 @@ services:
     build: .
     command: scheduler
     volumes_from:
-      - webpack
+      - api
     depends_on:
+      - api
       - postgres
       - redis
-      - api
     environment:
+      PYTHONUNBUFFERED: 0
       REDASH_LOG_LEVEL: "INFO"
       REDASH_REDIS_URL: "redis://redis:6379/0"
       REDASH_DATABASE_URL: "postgresql://postgres@postgres/postgres"
       QUEUES: "queries,scheduled_queries,celery"
       WORKERS_COUNT: 2
-  webpack:
-    build: .
-    command: run start
-    entrypoint: /usr/bin/npm
-    environment:
-      DEV_SERVER_HOST: '0.0.0.0'
-      REDASH_BACKEND: 'http://api:5000'
-    ports:
-      - "8080:8080"
-    volumes:
-      - ".:/app"
-      - "/app/client/dist"
-      - "/app/node_modules"
   redis:
     image: redis:2.8
   postgres:
