Name the development docker compose file as docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+# This configuration file is for **development** setup. For production, refer to
+# docker-compose.production.yml.
 version: '2'
 services:
   server:
